--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_title">Habitat:</string>
     <string name="text_description">Description:</string>
+    <string name="button_home">Home</string>
 
 </resources>
